# OSM

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  requirements.txt  resources.qrc
code/apps/: main.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
code/include/: ISerializable.hpp  NonCopyable.hpp  NonMoveable.hpp  prototypes.hpp  std.hpp  types.hpp
code/include/alg/: Dijkstra.hpp  RouteSearch.hpp
code/include/gui/: Panel.hpp  UIBridge.hpp  UIGraph.hpp  UIMap.hpp  WebPage.hpp  Window.hpp  mapTypes.hpp
code/include/io/: CMD.hpp  MapData.hpp  osmpbfReader.hpp
code/include/structures/: AdjacencyArray.hpp  AdjacentMatrix.hpp  Graph.hpp  Grid.hpp  Primitives.hpp  RTree.hpp
code/include/util/: Geo.hpp
code/source/alg/: Dijkstra.cpp  RouteSearch.cpp
code/source/gui/: Panel.cpp  UIBridge.cpp  UIGraph.cpp  UIMap.cpp  WebPage.cpp  Window.cpp
code/source/io/: MapData.cpp  osmpbfReader.cpp
code/source/structures/: AdjacencyArray.cpp  AdjacentMatrix.cpp  Graph.cpp  Grid.cpp  Primitives.cpp
code/source/util/: Geo.cpp
code/test/structures/: test_AdjacencyArray.cpp  test_Grid.cpp  test_dijkstra.cpp
report/: report.md
scripts/: compile.sh  install.sh  test.sh
ui/css/: style.css
ui/html/: main.html
ui/js/: map.js
